<resources>
    <string name="app_name">靜謐</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="quiet_nav_header_name">靜謐-靜夜之思</string>
    <string name="nav_item_welfare">福利专区</string>
    <string name="nav_item_daily">每日精彩</string>
    <string name="nav_item_app">应用分享</string>
    <string name="nav_item_recreation">娱乐互动</string>
    <string name="nav_item_share">分享</string>
    <string name="nav_item_about">关于</string>
    <string name="nav_title">更多</string>
    <string name="welfare_title">福利</string>
    <string name="welfare_save">保存图片</string>
    <string name="welfare_share">分享</string>
    <string name="web_label">H5服务</string>
    <string name="daily_detail">每日新闻详情页</string>
    <string name="check_permission_result_toast">需要赋予必要权限才能使用应用</string>
    <string name="need_permission_title">"为了保证应用正常运行，请进入设置开启必要权限"</string>
    <string name="save_image_success">保存图片成功</string>
    <string name="save_image_fail">保存图片失败</string>
    <string name="look_forward_to">敬请期待</string>
    <string name="load_fail">页面加载失败</string>
</resources>
